
option java_outer_classname="ContainResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message ContainResponse {
	optional bool exists = 1;
}