
option java_outer_classname="ContainsCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message ContainsCommand {
	optional bytes key = 1;
	optional int64 requestId = 2;
}